--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "quiz-jam",
   "version": "1.0.0",
   "description": "Trivia Game",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build:production": "cd ./frontend && npm install && npm run build && cd ../backend && npm install",
+    "start": "cd ./backend && NODE_ENV=production npm run start && cd ../frontend npm run start"
   },
   "author": "Ahamed Bilal",
   "license": "ISC"
