--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
   "author": "Ahamed Bilal",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.3",
     "mysql2": "^2.3.3",
     "sequelize": "^6.19.0"
   },
